fix overflow

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -29,6 +29,7 @@
   text-overflow: ellipsis;
   white-space: nowrap;
   overflow: hidden;
+  color: rgba(33, 33, 33, 1);
 }
 
 .card__like-button {
@@ -49,12 +50,12 @@
 @media screen and (max-width: 627px) {
   .card {
     align-items: center;
+    width: auto;
     padding: 0;
   }
   .card__image {
     width: 288px;
     height: 288px;
-    margin-bottom: 12px;
   }
   .card__title {
     font-size: 16px;
