--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,7 +2,6 @@
   background-color: #fcf5e5;
   min-height: 100vh;
   max-width: 100%;
-  overflow-x: hidden;
   font-family: "Poppins", Arial, Helvetica, sans-serif;
 }
 
