--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -16,6 +16,7 @@
   flex-direction: column;
   font-weight: 500;
   overflow: hidden;
+  color: rgba(33, 33, 33, 1);
 }
 
 .profile__name {
@@ -71,7 +72,7 @@
   height: 52px;
   background-color: rgba(33, 33, 33, 1);
   color: rgba(252, 245, 229, 1);
-  border-radius: 10px;
+  border-radius: 8px;
   transition: opacity 0.3s;
 }
 
@@ -88,6 +89,10 @@
     align-items: center;
     text-align: center;
     padding: 20px 0 0;
+  }
+  .profile__column {
+    width: 90%;
+    align-items: center;
   }
   .profile__image {
     width: 80px;
@@ -108,6 +113,6 @@
   .profile__add-btn {
     margin: 0 0 20px;
     padding: 0;
-    font-size: 16px;
+    width: 100%;
   }
 }
